--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "bin": "bin/cli.js",
   "scripts": {
     "build": "tsc",
-    "run": "npm run build && node bin/cli.js"
+    "start": "npm run build && node bin/cli.js"
   },
   "repository": {
     "type": "git",
