You can now choose between a basic and a batteries-included template

--- a/templates/vuejs/batteriesincluded/package.json
+++ b/templates/vuejs/batteriesincluded/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "{{projectName}}",
+  "name": "batteriesincluded",
   "version": "0.0.0",
-  "author": "{{author}}",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
