--- a/templates/vuejs/batteriesincluded/package.json
+++ b/templates/vuejs/batteriesincluded/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "batteriesincluded",
+  "name": "{{projectName}}",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -7,12 +7,17 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.16"
+    "appwrite": "^4.0.4",
+    "pinia": "^2.0.0-rc.14",
+    "vue": "^3.2.16",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.3",
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
-    "vue-tsc": "^0.3.0"
+    "vite-plugin-windicss": "^1.4.12",
+    "vue-tsc": "^0.3.0",
+    "windicss": "^3.1.9"
   }
 }
