--- a/templates/vuejs/basic/package.json
+++ b/templates/vuejs/basic/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "appwrite": "^4.0.4",
     "vue": "^3.2.16"
   },
   "devDependencies": {
