--- a/templates/vanilla/batteriesincluded/package.json
+++ b/templates/vanilla/batteriesincluded/package.json
@@ -9,5 +9,8 @@
   "devDependencies": {
     "typescript": "^4.3.2",
     "vite": "^2.6.4"
+  },
+  "dependencies": {
+    "appwrite": "^4.0.4"
   }
 }
