--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/inquirer": "^8.1.3",
     "@types/node": "^16.11.1",
+    "prettier": "2.4.1",
     "typescript": "^4.4.4"
   }
 }
