Workflow now depends on the Prettier workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,9 @@
 name: Build
 on:
-  workflow_dispatch:
-  pull_request:
-  push:
-    branches:
-      - master
+  workflow_run:
+    workflows: ["Prettier"]
+    types:
+      - completed
 
 jobs:
   build:
