--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -1,13 +1,13 @@
-name: Build
+name: Prettier
 on:
   workflow_dispatch:
-  workflow_run:
-    workflows: ["Prettier"]
-    types:
-      - completed
+  pull_request:
+  push:
+    branches:
+      - master
 
 jobs:
-  build:
+  pretier:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the code
@@ -29,5 +29,5 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci --ignore-scripts
 
-      - name: Build
-        run: npm run build
+      - name: Run Prettier
+        run: npm run prettier:check
