--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "bin": "bin/cli.js",
   "scripts": {
     "build": "tsc",
-    "start": "npm run build && node bin/cli.js"
+    "start": "npm run build && node bin/cli.js",
+    "prettier:check": "prettier --check .",
+    "prettier:fix": "prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -28,6 +30,7 @@
   "devDependencies": {
     "@types/inquirer": "^8.1.3",
     "@types/node": "^16.11.1",
+    "prettier": "2.4.1",
     "typescript": "^4.4.4"
   }
 }
