Changed build workflow requirements

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build
 on:
   workflow_dispatch:
   workflow_run:
-    workflows: ["Prettier"]
+    workflows: ["prettier"]
     types:
       - completed
 
