Reverted build workflow requirements

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
 name: Build
 on:
   workflow_dispatch:
-  workflow_run:
-    workflows: ["prettier"]
-    types:
-      - completed
+  pull_request:
+  push:
+    branches:
+      - master
 
 jobs:
   build:
