--- a/package.json
+++ b/package.json
@@ -32,5 +32,13 @@
     "@types/node": "^16.11.1",
     "prettier": "2.4.1",
     "typescript": "^4.4.4"
-  }
+  },
+  "keywords": [
+    "starter",
+    "template",
+    "vue",
+    "typescript",
+    "appwrite",
+    "boilerplate"
+  ]
 }
